--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <h1>Germán Umaña, {{ title }}</h1>
       
 <h2>{{ subtitle }}</h2>
-<p>Congratulations! Your app is runningggg. 🎉</p>
+<p>Congratulations! Your app is runningg. 🎉</p>
 <p>Uso de Pipes Date: {{fecha|date:'medium'}}</p>
 <p>Uso de uppercase: Original {{nombre}} cuando use uppercase {{nombre| uppercase}}</p>
 <p>Uso de ngFor: </p>
